tests/baselines/reference/legacy-octal-escape-sequence-prologue-strict.errors.txt
legacy-octal-escape-sequence-prologue-strict.ts(16,14): error TS1487: Octal escape sequences are not allowed. Use the syntax '\x2a'.


==== legacy-octal-escape-sequence-prologue-strict.ts (1 errors) ====
    // Copyright (c) 2012 Ecma International.  All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    es5id: 7.8.4-1-s
    description: >
        A directive preceding an 'use strict' directive may not contain
        an OctalEscapeSequence
    negative:
      phase: parse
      type: SyntaxError
    ---*/
    
    
    (function() {
      "asterisk: \052";
                 ~~~~
!!! error TS1487: Octal escape sequences are not allowed. Use the syntax '\x2a'.
      "use strict";
    });
    